--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <h3 id="info"></h3>
 
-    <button id="resetBtn">Restart</button>
+    <button id="resetBtn" onclick="restartGame()">Restart</button>
 
 
 
